# cpputils

./: .clang-format  .clang_format  .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_IMAGE.cmake  FindSDL2_Net.cmake  FindSDL2_image.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  funcEnableStrictClangTidy.cmake  funcEnableStrictOptions.cmake  funcForceOutputPrefixded.cmake  funcRuntimeCopy.cmake
include/: ptrclass.cpp  ptrclass.h
include/linalg/: quaternion.h  vec.h
include/ptrclass/: ptrclass.h
include/serialization/: serializable.h
include/slotmap/: slotmap.h
include/uuid/: uuid.h
script/: format.bash  makeClass.bash
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/example_ptrclass/: CMakeLists.txt  example_ptrclass.cpp
src/examples/example_uuid/: CMakeLists.txt  example_uuid.cpp
src/lib/: CMakeLists.txt
src/lib/linalg/: CMakeLists.txt
src/lib/ptrclass/: CMakeLists.txt
src/lib/serialization/: CMakeLists.txt
src/lib/slotmap/: CMakeLists.txt
src/lib/uuid/: CMakeLists.txt  uuid.cpp
